--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,136 @@
-h1{
-    color: brown;
+body{
+    font-family: 'Open Sans', sans-serif;
 }
+*{
+    margin: 0;
+}
+
+.logo{ 
+    height: 90px;
+    width: 100px;  
+   margin-left: 10%;
+}
+
+nav{
+display: flex;
+justify-content: space-between;
+margin-top: 2%;
+margin-right: 5%;
+}
+.navbar li:hover{
+    color: #FF556E;
+
+}
+.desplegable li{
+text-align: left;
+box-sizing: content-box;
+width: 180px;
+padding: 10px;
+}
+
+
+.btn{
+    color: #FF556E;
+    background-color: white;
+    border-radius:150px ;
+    border: solid #FF556E;
+    
+  
+  
+}
+
+.navbar{
+display: flex;
+list-style: none;
+justify-content: flex-end;
+gap: 30px;
+}
+
+.desplegable-li {
+    position: relative;
+    text-align:left;
+  }
+
+.desplegable-li:hover .desplegable {
+    display: block;
+    opacity: 1;
+    color: black;
+  }
+  
+  .desplegable {
+    position: absolute;
+    opacity: 0;
+    display: none;
+    list-style: none;
+    
+  }
+  .figuras{
+    display: flex;
+    justify-content: space-between;
+  }
+  .figura1{
+    height: 15px;
+    width: 15px; 
+    margin-left: 15%;
+    margin: 5%;
+  }
+
+  .figura2{
+    height: 15px;
+    width: 15px; 
+    margin-right:15% ;
+    margin: 5%;
+
+  }
+
+.titulo{
+    text-align: center;
+}
+
+h1{
+    font-size: 70px;
+}
+p{
+    text-align: center;
+    font-size: 15px;
+    margin-right: 26%;
+    margin-left: 26%;
+}
+
+.botones{
+    text-align: center;
+    
+
+}
+
+.botton{
+
+    border-radius: 250px;
+    background-color:#FF556E ;
+    color: white;
+    text-decoration: none;
+    padding: 10px 10px;
+  
+}
+
+.botton img{
+    height:15px ;
+    width:15px ;
+    margin-top:2% ;
+} 
+
+.circulo{
+    height: 90px;
+    width: 100px;
+    margin-left: 10%;
+    margin-top: 4%;
+    
+
+    
+}
+
+
+    
+
+
+
